--- a/templates/back/user/edit.html.twig
+++ b/templates/back/user/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('back/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('front_default_index') }}">back to menu</a>
+    <a href="{{ path('back_user_index') }}">back to list</a>
 
     {{ include('back/user/_delete_form.html.twig') }}
 {% endblock %}
