--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -16,7 +16,7 @@
     <body>
         <nav>
             <ul>
-                <li><a href="{{ path('front_default_index') }}">Accueil</a></li>
+                <li><a href="{{ path('back_user_index') }}">Panel user</a></li>
             </ul>
         </nav>
         {% block body %}{% endblock %}
