--- a/templates/back/user/edit.html.twig
+++ b/templates/back/user/edit.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<title>Edit User</title>
+<title>Modifier un utilisateur</title>
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier un utilisateur</h1>
 
     {{ include('back/user/_form.html.twig', {'button_label': 'Update'}) }}
 
