--- a/templates/back/user/new.html.twig
+++ b/templates/back/user/new.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<title>New User</title>
+<title>Créer un utilisateur</title>
 
 {% block body %}
-    <h1>Create new User</h1>
+    <h1>Créer un utilisateur</h1>
 
     {{ include('back/user/_form.html.twig') }}
 
