--- a/templates/back/user/show.html.twig
+++ b/templates/back/user/show.html.twig
@@ -3,7 +3,7 @@
 <title>User</title>
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Utilisateur</h1>
 
     <table class="table">
         <tbody>
@@ -30,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_user_index') }}">back to list</a>
+    <a href="{{ path('back_user_index') }}">Retour</a>
 
-    <a href="{{ path('back_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('back_user_edit', {'id': user.id}) }}">Modifier</a>
 
     {{ include('back/user/_delete_form.html.twig') }}
 {% endblock %}
