--- a/templates/front/default/update_user_profile.html.twig
+++ b/templates/front/default/update_user_profile.html.twig
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 
-<title>Edit User</title>
+<title>Modifier son profile</title>
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier son profile</h1>
 
     {{ include('back/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('front_default_index') }}">back to menu</a>
-
-    {{ include('back/user/_delete_form.html.twig') }}
+    <a href="{{ path('front_default_index') }}">Retour au menu</a>
 {% endblock %}
