--- a/templates/front/default/update_user_profile.html.twig
+++ b/templates/front/default/update_user_profile.html.twig
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base_front.html.twig' %}
 
-<title>Modifier son profile</title>
+{% block title %}Modifier son profile{% endblock %}
 
 {% block body %}
-    <h1>Modifier son profile</h1>
-
-    {{ include('back/user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('front_default_index') }}">Retour au menu</a>
+    {{ include('front/user/_form.html.twig', {'button_label': 'Update'}) }}
 {% endblock %}
