--- a/templates/front/mission/new.html.twig
+++ b/templates/front/mission/new.html.twig
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base_front.html.twig' %}
 
-<title>Création d'une mission</title>
+{% block title %}Création d'une demande de mission{% endblock %}
 
 {% block body %}
-    <h1>Création d'un mission</h1>
-
     {{ include('front/mission/_form.html.twig') }}
-
-    <a href="{{ path('front_mission_index') }}">Retour</a>
 {% endblock %}
