--- a/templates/front/mission/_form.html.twig
+++ b/templates/front/mission/_form.html.twig
@@ -1,4 +1,85 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <!-- Container for demo purpose -->
+    <div class="container my-24 px-6 mx-auto">
+
+        <!-- Section: Design Block -->
+        <section class="mb-32 text-gray-800">
+
+            <div class="relative overflow-hidden bg-no-repeat bg-cover" style="background-position: 50%; background-image: url('https://mdbootstrap.com/img/new/textures/full/284.jpg'); height: 300px;">
+            </div>
+            <div class="container text-gray-800 px-4 md:px-12">
+                <div class="block rounded-lg shadow-lg py-10 md:py-12 px-2 md:px-6"
+                    style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
+                    <div class="flex flex-wrap">
+                        <div class="grow-0 shrink-0 basis-auto w-full xl:w-5/12 px-3 lg:px-6 mb-12 xl:mb-0">
+                            <form name="mission" method="post">
+                                <div class="form-group mb-6" id="mission">
+                                    {{ form_row(form.name, {
+                                        'label_attr': {
+                                            'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                                        },
+                                        'attr': {
+                                            'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                                            'placeholder': 'Le nom de la mission'
+                                        },
+                                    }) }}
+                                </div>
+                                <div class="form-group mb-6">
+                                    {{ form_row(form.description, {
+                                        'label_attr': {
+                                            'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                                        },
+                                        'attr': {
+                                            'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                                            'placeholder': 'La description de la mission'
+                                        },
+                                    }) }}
+                                </div>
+                                <div class="form-group mb-6">
+                                    {{ form_row(form.location, {
+                                        'label_attr': {
+                                            'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                                        },
+                                        'attr': {
+                                            'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                                            'placeholder': "L'emplacement de votre mission"
+                                        },
+                                    }) }}
+                                </div>
+                                <div class="form-group mb-6">
+                                    {{ form_row(form.result, {
+                                        'label_attr': {
+                                            'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                                        },
+                                        'attr': {
+                                            'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                                            'placeholder': 'Le résultat de la mission'
+                                        },
+                                    }) }}
+                                </div>
+                                <div class="form-group mb-6">
+                                    {{ form_row(form.missionType, {
+                                        'label_attr': {
+                                            'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
+                                        },
+                                        'attr': {
+                                            'class': 'form-select appearance-none block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding bg-no-repeat border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" aria-label="Default select example',
+                                            'placeholder': 'La description de la mission'
+                                        },
+                                    }) }}
+                                </div>
+                                {{ form_widget(form) }}
+                                <button type="submit" class="w-full px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">{{ button_label|default('Save') }}</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="p-6 pb-0 mb-0 bg-white border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
+                <a href="{{ path('front_mission_index') }}">Retour</a>
+            </div>
+        </section>
+        <!-- Section: Design Block -->
+    </div>
+    <!-- Container for demo purpose -->
 {{ form_end(form) }}
