--- a/templates/front/mission/index.html.twig
+++ b/templates/front/mission/index.html.twig
@@ -1,52 +1,65 @@
-<!DOCTYPE html>
+{% extends 'base_front.html.twig' %}
 
-<title>Missions</title>
+{% block title %}Mes demandes de mission{% endblock %}
 
 {% block body %}
-    <h1>Vos missions</h1>
+    <div class="flex flex-wrap -mx-3">
+        <div class="flex-none w-full max-w-full px-3">
+            <div class="relative flex flex-col min-w-0 mb-6 break-words bg-white border-0 border-transparent border-solid shadow-soft-xl rounded-2xl bg-clip-border">
+                <div class="p-6 pb-0 mb-0 bg-white border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
+                    <h6>Mes demandes de mission</h6>
+                </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Type</th>
-                <th>Description</th>
-                <th>Location</th>
-                <th>Result</th>
-                <th>Status</th>
-                <th>Héro</th>
-                <th>Crée à</th>
-                <th>Modifié à</th>
-                <th>Date de fin</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for mission in missions %}
-            <tr>
-                <td>{{ mission.id }}</td>
-                <td>{{ mission.name }}</td>
-                <td>{{ mission.mission_type }}</td>
-                <td>{{ mission.description }}</td>
-                <td>{{ mission.location }}</td>
-                <td>{{ mission.result }}</td>
-                <td>{{ mission.status }}</td>
-                <td>{{ mission.hero ? mission.hero : 'Pas de héro assigné' }}</td>
-                <td>{{ mission.created_at ? mission.created_at|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ mission.updated_at ? mission.updated_at|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ mission.date_end ? mission.date_end|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('front_mission_show', {'id': mission.id}) }}">show</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="11">Pas encore de mission</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                <!-- component -->
+                <div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
+                    <table class="w-full border-collapse bg-white text-left text-sm text-gray-500">
+                        <thead class="bg-gray-50">
+                        <tr>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Nom</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Type</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Description</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Localisation</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Résultat</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Status</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Héro</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Crée à</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Modifié à</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">Date de fin</th>
+                            <th scope="col" class="px-6 py-4 font-medium text-gray-900">actions</th>
+                        </tr>
+                        </thead>
+                        <tbody class="divide-y divide-gray-100 border-t border-gray-100">
 
-    <a href="{{ path('front_mission_new') }}">Créer une mission</a>
+                            {% for mission in missions %}
+                                <tr class="hover:bg-gray-50">
+                                    <td class="px-6 py-4">{{ mission.name }}</td>
+                                    <td class="px-6 py-4">{{ mission.mission_type }}</td>
+                                    <td class="px-6 py-4">{{ mission.description }}</td>
+                                    <td class="px-6 py-4">{{ mission.location }}</td>
+                                    <td class="px-6 py-4">{{ mission.result }}</td>
+                                    <td class="px-6 py-4">{{ mission.status }}</td>
+                                    <td class="px-6 py-4">{{ mission.hero ? mission.hero : 'Pas de héro assigné' }}</td>
+                                    <td class="px-6 py-4">{{ mission.created_at ? mission.created_at|date('Y-m-d H:i:s') : '' }}</td>
+                                    <td class="px-6 py-4">{{ mission.updated_at ? mission.updated_at|date('Y-m-d H:i:s') : '' }}</td>
+                                    <td class="px-6 py-4">{{ mission.date_end ? mission.date_end|date('Y-m-d H:i:s') : '' }}</td>
+                                    <td class="px-6 py-4">
+                                        <div class="flex justify-end gap-4">
+                                            {{ include('front/mission/_delete_form.html.twig') }}
+                                        </div>
+                                    </td>
+                                </tr>
+                            {% else %}
+                                <tr>
+                                    <td colspan="11">Pas encore de mission</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="p-6 pb-0 mb-0 bg-white border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
+                    <a href="{{ path('front_mission_new') }}">Créer une demande de mission</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
