--- a/templates/back/profil/_form.html.twig
+++ b/templates/back/profil/_form.html.twig
@@ -13,7 +13,7 @@
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Le nom de famille"
+                                'placeholder': "Ton nom de famille"
                             },
                         }) }}
                     </div>
@@ -24,7 +24,7 @@
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Le Prénom"
+                                'placeholder': "Ton Prénom"
                             },
                         }) }}
                     </div>
@@ -35,7 +35,7 @@
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "L'adresse email"
+                                'placeholder': "Ton adresse email"
                             },
                         }) }}
                     </div>
@@ -46,7 +46,7 @@
                             },
                             'attr': {
                                 'class': 'mt-1 block w-full rounded-md border border-gray-300 bg-white py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm',
-                                'placeholder': "Le rôle"
+                                'placeholder': "Ton rôle"
                             },
                         }) }}
                     </div>
@@ -57,7 +57,7 @@
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Le mot passe"
+                                'placeholder': "Ton mot passe"
                             },
                         }) }}
                     </div>
