--- a/templates/front/mission/_form.html.twig
+++ b/templates/front/mission/_form.html.twig
@@ -69,7 +69,7 @@
                                     }) }}
                                 </div>
                                 {{ form_widget(form) }}
-                                <button type="submit" class="w-full px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">{{ button_label|default('Save') }}</button>
+                                <button type="submit" class="w-full px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">{{ button_label|default('Sauvegarder') }}</button>
                             </form>
                         </div>
                     </div>
