--- a/templates/hero/update_mission.html.twig
+++ b/templates/hero/update_mission.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('hero/_form.html.twig') }}
 
-    <a href="{{ path('hero_missions') }}">Retour</a>
+    <a href="{{ path('hero_mission_in_progress') }}">Retour</a>
 {% endblock %}
