Add event crud + front for users and wip

--- a/templates/back/ability/edit.html.twig
+++ b/templates/back/ability/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Ability</h1>
 
-    {{ include('back/ability/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/ability/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     <a href="{{ path('back_ability_index') }}">Retour</a>
 {% endblock %}
