--- a/templates/back/ability/new.html.twig
+++ b/templates/back/ability/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Création d'un abilité{% endblock %}
 
 {% block body %}
-    <h1 class="text-3xl text-black pb-6">Création d'un abilité</h1>
+    <h1 class="text-3xl text-black pb-6">Création d'une abilité</h1>
 
     {{ include('back/ability/_form.html.twig') }}
 
