--- a/templates/back/mission_history/show.html.twig
+++ b/templates/back/mission_history/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Updated_at</th>
-                <td>{{ mission_history.updatedAt ? mission_history.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ mission_history.updatedAt ? mission_history.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
             </tr>
             <tr>
                 <th>Updated_by</th>
