--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base_authentification.html.twig' %}
+{% extends 'base_front.html.twig' %}
 
 {% block title %}Inscription{% endblock %}
 
