--- a/templates/back/event/_form.html.twig
+++ b/templates/back/event/_form.html.twig
@@ -1,3 +1,4 @@
+
 {{ form_start(form) }}
     <div class="mt-10 sm:mt-0">
         <div class="md:grid md:grid-cols-3 md:gap-6">
@@ -6,63 +7,70 @@
                 <div class="overflow-hidden shadow sm:rounded-md">
                 <div class="bg-white px-4 py-5 sm:p-6">
                     <div class="grid grid-cols-6 gap-6">
-                    <div class="col-span-6 sm:col-span-4">
-                        {{ form_row(form.lastname, {
+                     <div class="col-span-6 sm:col-span-4">
+                        {{ form_row(form.name, {
                             'label_attr': {
                                 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Ton nom de famille"
+                                'placeholder': "Le nom de l'abilité"
                             },
                         }) }}
                     </div>
                     <div class="col-span-6 sm:col-span-4">
-                        {{ form_row(form.firstname, {
+                        {{ form_row(form.description, {
                             'label_attr': {
                                 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Ton Prénom"
+                                'placeholder': "La description"
                             },
                         }) }}
                     </div>
                     <div class="col-span-6 sm:col-span-4">
-                        {{ form_row(form.email, {
+                        {{ form_row(form.date, {
+                            'attr': {
+                                'class': 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
+                            },
+                        }) }}
+                    </div>
+                   <div class="col-span-6 sm:col-span-4">
+                        {{ form_row(form.price, {
+                            'type':'number',
                             'label_attr': {
                                 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Ton adresse email"
+                                'placeholder': "Le prix",
+                                'min' : 0,
+                                'max' : 9999.99,
+                                'step' : 0.01,
                             },
                         }) }}
                     </div>
                     <div class="col-span-6 sm:col-span-4">
-                        {{ form_row(form.roles, {
-                            'label_attr': {
-                                'class': 'block text-sm font-medium text-gray-700'
-                            },
-                            'attr': {
-                                'class': 'mt-1 block w-full rounded-md border border-gray-300 bg-white py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm',
-                                'placeholder': "Ton rôle"
-                            },
-                        }) }}
-                    </div>
-                    <div class="col-span-6 sm:col-span-4">
-                        {{ form_row(form.plainPassword, {
+                        {{ form_row(form.location, {
                             'label_attr': {
                                 'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
                             },
                             'attr': {
                                 'class': 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500',
-                                'placeholder': "Ton mot passe"
+                                'placeholder': "L'emplacement de l'évènement"
+                            },
+                        }) }}
+                    </div>
+                    <div class="col-span-6 sm:col-span-4">
+                        {{ form_row(form.filename, {
+                            'label_attr': {
+                                'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'
                             },
                         }) }}
                     </div>
                 </div>
-                 {{ form_widget(form) }}
+                {{ form_widget(form) }}
                 <div class="bg-white-50 px-4 py-3 text-right sm:px-6">
                     <button type="submit" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">{{ button_label|default('Sauvegarder') }}</button>
                 </div>
