--- a/templates/front/default/update_user_profile.html.twig
+++ b/templates/front/default/update_user_profile.html.twig
@@ -3,5 +3,9 @@
 {% block title %}Modifier son profil{% endblock %}
 
 {% block body %}
-    {{ include('front/user/_form.html.twig', {'button_label': 'Update'}) }}
+    <section class="bg-white-50 dark:bg-gray-900">
+        <div class="md:h-screen lg:py-0">
+            {{ include('front/user/_form.html.twig', {'button_label': 'Update'}) }}
+        </div>
+    </div>
 {% endblock %}
