--- a/templates/front/mission/_form.html.twig
+++ b/templates/front/mission/_form.html.twig
@@ -11,7 +11,7 @@
                 <div class="block rounded-lg shadow-lg py-10 md:py-12 px-2 md:px-6"
                     style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
                     <div class="flex flex-wrap">
-                        <div class="grow-0 shrink-0 basis-auto w-full xl:w-5/12 px-3 lg:px-6 mb-12 xl:mb-0">
+                        <div class="grow-0 shrink-0 basis-auto w-full">
                             <form name="mission" method="post">
                                 <div class="form-group mb-6" id="mission">
                                     {{ form_row(form.name, {
