--- a/templates/hero/assigned.html.twig
+++ b/templates/hero/assigned.html.twig
@@ -39,9 +39,13 @@
                 <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 border-t border-gray-200">
                     <!-- Accept Decline buttons -->
                     <div class="flex">
-                        <a href="{{ path('hero_accept_mission', {'id': asg.id}) }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                        {% if hero.isavailable == false %}
+                            <a href="{{ path('hero_accept_mission', {'id': asg.id}) }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 {% if hero.isavailable == false %}cursor-not-allowed opacity-50" style='pointer-events: none'{% endif %}>
+                        {% else %}
+                            <a href="{{ path('hero_accept_mission', {'id': asg.id}) }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                        {% endif %}
                             Accepter
-                        </a>
+                            </a>
                         <a href="{{ path('hero_reject_mission', {'id': asg.id}) }}" class="ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
                             Refuser
                         </a>
