--- a/templates/hero/in_progress.html.twig
+++ b/templates/hero/in_progress.html.twig
@@ -58,7 +58,7 @@
     {% for history in in_progress.missionhistories %}                
         <li class="mb-10 ml-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{{ history.updatedat|date("d-m-Y") }} à {{ history.updatedat|date("H:m:s") }}</time>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{{ history.updatedat|date("d-m-Y") }} à {{ history.updatedat|date("H:i:s") }}</time>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Mise à jour</h3>
             <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{{ history.status }}</p>
             {% if history.comment %}
